# mangakg-v2

./: .gitignore  CLAUDE.md  docker-compose.yml  generate_avatars.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  TIGRIS_IMPLEMENTATION.md  fly.toml  manage.py  pyproject.toml
backend/mangakg/: asgi.py  settings.py  urls.py  wsgi.py
backend/reader/: admin.py  middleware.py  models.py  serializers.py  storage.py  urls.py  validators.py  views.py
backend/reader/management/commands/: cleanup_chapter_files.py
backend/reader/migrations/: 0001_initial.py
backend/reader/tests/: test_api.py  test_models.py  test_storage.py
frontend/: .dockerignore  .env.example  .env.local  .env.production  Dockerfile  README.md  fly.toml  index.html  nginx.conf  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ChapterSelector.tsx  ContinueReadingSection.tsx  Header.tsx  LanguageSelector.tsx  MangaCard.tsx  MangaCarousel.tsx  SettingsMenu.tsx
frontend/src/contexts/: LanguageContext.tsx
frontend/src/hooks/: useApi.ts  useContinueReading.ts  useKeyboardNavigation.tsx  useTranslation.ts
frontend/src/pages/: AboutPage.tsx  CataloguePage.tsx  HomePage.tsx  MangaDetailsPage.tsx  NotFound.tsx  ReaderPage.tsx
rules/: generate-tasks.md
tasks/: prd-chapter-selection.md  prd-continue-reading.md  prd-django-backend.md  prd-frontend-api-integration.md  tasks-prd-chapter-selection.md  tasks-prd-continue-reading.md  tasks-prd-django-backend.md  tasks-prd-frontend-api-integration.md
tmp_files/: admin.py  models.py
(+5 files in other folders)
